src/test/deca/syntax/invalid/lex/includemissing.deca
// Description:
//    Programme minimaliste utilisant faux include
//
// Resultats:
//    token recognition error at: '#include c'
//
// Historique:
//    cree le 01/01/2022


// il manque des " "
#include comment.deca
